# HippocampAI

./: .deepsource.toml  .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CHAT_DEMO_SUMMARY.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  MEMORY_HEALTH_QUICKSTART.md  MONITORING_STATUS.md  NEW_FEATURES_GUIDE.md  NEW_FEATURES_IMPLEMENTATION.md  NEXT_STEPS.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_START_NEW_FEATURES.md  README.md  README_SAAS.md  SAAS_INTEGRATION_GUIDE.md  SAAS_LIBRARY_INTEGRATION_REPORT.md  SAAS_MODES_GUIDE.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_IMPROVEMENTS.md  TESTING.md  UNIFIED_ARCHITECTURE.md  VERSION_0.3.0_RELEASE_SUMMARY.md  agents.md  alembic.ini  async_chatbot.py  chat.py  chat_advanced.py  check_user_session.py  cli_chat.py  config.yaml  debug_duplicate_user_id.py  (+42 more)
.github/workflows/: ci.yml  dependency-health.yml  publish-pypi.yml  publish-test-pypi.yml  sonar_scan.yml
admin_ui/: index.html
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
archive/: API_REFERENCE.md  CORE_MEMORY_OPERATIONS.md  DEPLOYMENT_AND_USAGE_GUIDE.md  DOCUMENTATION_INDEX.old.md  IMPLEMENTATION_SUMMARY.old.md  MEMORY_MANAGEMENT_IMPLEMENTATION.md  SAAS_INTEGRATION_GUIDE.md  SMART_MEMORY_FEATURES.md
bench/: __init__.py  data_generator.py  run_benchmarks.py  runner.py
bench/eval/: __init__.py  datasets.py  harness.py  judge.py  metrics.py  run_eval.py
config/: config.py  logging_config.yaml
data/: users.duckdb.wal
docs/: ADVANCED_COMPRESSION_GUIDE.md  API_COMPLETE_REFERENCE.md  API_REFERENCE.md  ARCHITECTURE.md  AUTO_SUMMARIZATION_GUIDE.md  BACKUP_RECOVERY.md  CELERY_GUIDE.md  CELERY_OPTIMIZATION_AND_TRACING.md  CELERY_USAGE_GUIDE.md  CHANGELOG.md  CHAT_DEMO_GUIDE.md  CHAT_INTEGRATION.md  CHAT_README.md  COMPETITIVE_ADVANTAGES.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_COMPARISON.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT_READINESS_REPORT.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  DOCUMENTATION_INDEX.md  EVALUATION.md  EXAMPLES.md  FEATURES.md  GETTING_STARTED.md  HOW_TO_RUN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTELLIGENCE_FEATURES.md  LIBRARY_COMPLETE_REFERENCE.md  MCP_SERVER.md  MEMORY_CONFLICT_RESOLUTION_GUIDE.md  MEMORY_CONFLICT_RESOLUTION_QUICKSTART.md  MEMORY_HEALTH_MONITORING_GUIDE.md  MEMORY_MANAGEMENT.md  MEMORY_MANAGEMENT_API.md  MEMORY_QUALITY_AND_OBSERVABILITY.md  MEMORY_QUALITY_HEALTH_GUIDE.md  MEMORY_TRACKING_GUIDE.md  MONITORING_INTEGRATION_GUIDE.md  (+44 more)
docs/archive/: ADVANCED_INTELLIGENCE_API.md  AUTO_SUMMARIZATION_IMPLEMENTATION_SUMMARY.md  CORE_ARCHITECTURE_GUIDE.md  DEPLOYMENT_AND_USAGE_GUIDE.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  DOCUMENTATION_INDEX.old.md  DOCUMENTATION_REORGANIZATION.md  EXAMPLES.md  GETTING_STARTED.old.md  INTEGRATION_TEST_SUMMARY.md  MEMORY_HEALTH_IMPLEMENTATION_SUMMARY.md  NEW_FEATURES_SUMMARY.md  PACKAGE_SUMMARY.md  QUICKSTART.md  USAGE.md  VALIDATION_SUMMARY.md  WHATS_NEW_UNIFIED_CLIENT.md
examples/: 01_basic_usage.py  02_conversation_extraction.py  03_hybrid_retrieval.py  04_custom_configuration.py  05_multi_user.py  06_advanced_memory_management.py  07_advanced_features_demo.py  08_scheduler_demo.py  09_graph_persistence_demo.py  10_memory_management_api.py  10_session_management_demo.py  11_intelligence_features_demo.py  11_semantic_clustering_demo.py  11_smart_memory_demo.py  12_multiagent_demo.py  13_temporal_reasoning_demo.py  14_cross_session_insights_demo.py  15_telemetry_and_config_demo.py  16_chatbot_with_memory.py  20_collaboration_demo.py  21_predictive_analytics_demo.py  22_auto_healing_demo.py  README.md  advanced_intelligence_demo.py  advanced_memory_example.py  conflict_and_provenance_demo.py  consolidation_demo.py  embedding_example.py  example_resilience.py  example_saas_control.py  groq_llama_chat_demo.py  memory_extractor_example.py  memory_health_and_observability_demo.py  memory_retriever_example.py  memory_store_example.py  provider_comparison.py  query_qdrant_memories.py  requirements-groq-demo.txt  simple_api_mem0_style.py  simple_api_session_style.py  (+5 more)
frontend/: .env.docker  Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/context/: theme-provider.tsx
frontend/src/: App.tsx  main.tsx
monitoring/: prometheus.yml
scripts/: create_test_session.py  e2e_test.py  generate_chat_data.py  init_admin.py  init_postgres.sh  run-tests.sh  sync_sessions_to_duckdb.py  test_all_features.py  verify_postgres.sh  verify_postgres_docker.sh
src/: ai_chat.py  embedding_service.py  importance_scorer.py  llm_base.py  llm_provider.py  logger.py  memory_consolidator.py  memory_deduplicator.py  memory_extractor.py  memory_retriever.py  memory_store.py  memory_updater.py  qdrant_client.py  session_manager.py  settings.py  tools.py
src/hippocampai/: __init__.py  ai_chat.py  async_client.py  celery_app.py  celery_app.pyi  cli_chat.py  client.py  client_extensions.py  config.py  enhanced_client.py  importance_scorer.py  llm_base.py  logger.py  (+18 more)
tests/: conftest.py  demo_telemetry.py  run_all_tests.py  test_advanced_compression.py  test_advanced_features.py  test_agentic_classifier.py  test_all_features_integration.py  test_async.py  test_auto_consolidation.py  test_auto_summarization.py  test_benchmarks.py  test_bitemporal.py  test_comprehensive_integration.py  test_comprehensive_validation.py  test_config.py  test_conflict_resolution.py  test_context_assembly.py  test_custom_schema.py  test_dual_db.py  test_e2e_saas_qa.py  test_functional.py  test_importance_decay.py  test_install.py  test_intelligence_integration.py  test_knowledge_graph_e2e.py  test_library_saas_integration.py  test_memory_health.py  test_memory_management_api.py  test_metrics.py  test_models.py  test_monitoring_tags_storage.py  test_multiagent.py  test_new_features.py  test_package.py  test_pipeline.py  test_portability_exporter.py  test_priority_fixes.py  test_prospective_memory.py  test_qdrant_integration.py  test_quick_validation.py  (+8 more)
web/: chat.html
(+261 files in other folders)
